fix: center why join paragraphs and adjust footer links for mobile alignment

--- a/css/style.css
+++ b/css/style.css
@@ -981,8 +981,8 @@ form label {
 
 #gtco-footer .gtco-footer-links {
   padding: 0;
-  margin: 0 auto 30px auto;
-  width: fit-content;
+  margin: 0 auto;
+  width: 100%;
   text-align: center;
 }
 #gtco-footer .gtco-footer-links li {
@@ -1010,10 +1010,15 @@ form label {
   text-transform: uppercase;
 }
 @media screen and (max-width: 768px) {
-  #gtco-footer .copyright .pull-left,
-  #gtco-footer .copyright .pull-right {
-    float: none !important;
+  #gtco-footer .col-md-4,
+  #gtco-footer .col-md-8 {
+    float: none;
+    width: 100%;
     text-align: center;
+  }
+  #gtco-footer .gtco-footer-links li {
+    display: block;
+    padding: 0;
   }
 }
 #gtco-footer .copyright .block {
